--- a/src/theme/layout.module.css
+++ b/src/theme/layout.module.css
@@ -96,6 +96,10 @@ main > * {
   justify-content: center;
 }
 
+.d-flex {
+  display: flex;
+}
+
 .flex-row {
   display: flex;
   flex-direction: row;
