--- a/src/theme/buttons.module.css
+++ b/src/theme/buttons.module.css
@@ -34,6 +34,14 @@ button:disabled {
   background-color: var(--neutral-lighter);
   color: var(--neutral);
   border-color: var(--neutral-lighter);
+  pointer-events: none;
+}
+
+button:disabled:hover {
+  background-color: var(--neutral-lighter);
+  color: var(--neutral);
+  border-color: var(--neutral-lighter);
+  pointer-events: none;
 }
 
 .btn-1-normal {
