--- a/src/pages/Profile.module.css
+++ b/src/pages/Profile.module.css
@@ -92,14 +92,16 @@
 }
 
 .tags {
+  margin-top: 0.5rem;
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
-  gap: 1rem;
+  justify-content: flex-start;
+  gap: 0.5rem 0.5rem;
   flex-wrap: wrap;
 }
 
 .tags button {
+  margin: 0;
   font-size: var(--text-sm);
   font-weight: 400;
   padding: 0 2rem 0 1rem;
