new: services show in profile-view + css: list styling and dynamic behaviour

--- a/src/components/Profile/ProfileView.module.css
+++ b/src/components/Profile/ProfileView.module.css
@@ -103,3 +103,11 @@
   border-radius: 10px;
   background-color: var(--background-highlight);
 }
+
+.servicesDiv ul > li {
+  font-size: var(--text-base);
+  color: var(--neutral);
+  line-height: normal;
+  margin-bottom: 0.75rem;
+  padding-right: 0.5rem;
+}
