refactor: split Profile.modules into more css modules + inline styles cleaning + extracted ServicesTagInput component

--- a/src/components/CheckboxItem.module.css
+++ b/src/components/CheckboxItem.module.css
@@ -2,10 +2,15 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  align-items: center;
+  align-items: start;
   gap: var(--space-0);
   margin: 0;
   font-weight: 400;
+}
+
+.container input {
+  height: min-content;
+  margin-top: 0.25rem;
 }
 
 .container:hover {
