--- a/src/components/ProfileRegistration/ProfileView.module.css
+++ b/src/components/ProfileRegistration/ProfileView.module.css
@@ -59,15 +59,15 @@
   background-color: gray;
 }
 
-.textContainer {
+.profileBodyContainer {
   padding: 0 1rem;
   display: flex;
   flex-direction: column;
   gap: var(--space-5);
 }
 
-.textContainer p {
-  color: var(--neutral-light);
+.profileBodyContainer p {
+  color: var(--neutral);
 }
 
 .details {
@@ -78,11 +78,15 @@
   color: var(--neutral-light);
 }
 
-.details > * {
+.details li {
   display: flex;
   flex-direction: row;
   justify-content: start;
   align-items: center;
+}
+
+.details p {
+  color: var(--neutral-light);
 }
 
 .hlContainer {
